# podium

./: Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs
src/app/: mod.rs
src/app/state/: deployments.rs  list.rs  mod.rs
src/app/ui/: help.rs  mod.rs  overlay.rs  state.rs
src/input/: events.rs  mod.rs
src/k8s/: mod.rs  reflector.rs  scale.rs
