[package]
name = "poddy"
version = "0.1.0"
description = "Your friendly pod buddy"

repository = "https://github.com/ctron/poddy"
categories = ["api-bindings"]
keywords = ["Kubernetes"]
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive", "cargo", "unicode", "wrap_help", "env"] }
crossterm = "0.23"
chrono = "0.4"
humantime = "2"
k8s-openapi = { version = "0.15", features = ["v1_22"] }
kube = "0.73"
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tui = "0.18"
tui-logger = "0.8"