[package]
name = "podwatch"
version = "0.1.3"
description = "Your friendly pod buddy"

repository = "https://github.com/ctron/podwatch"
categories = ["command-line-interface", "visualization"]
keywords = ["Kubernetes", "Pods", "Watch"]
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "3", features = ["derive", "cargo", "unicode", "wrap_help", "env"] }
crossterm = "0.23"
futures = "0.3"
humantime = "2"
k8s-openapi = { version = "0.15", features = ["v1_22"] }
kube = { version = "0.73", features = ["runtime"] }
log = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tui = "0.18"
tui-logger = "0.8"
