[package]
name = "podium"
version = "0.2.0"
description = "Your friendly pod buddy"

repository = "https://github.com/ctron/podium"
categories = ["command-line-interface", "visualization"]
keywords = ["Kubernetes", "Pods", "Watch"]
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo", "unicode", "wrap_help", "env"] }
crossterm = "0.27"
futures = "0.3"
humantime = "2"
k8s-openapi = { version = "0.21", features = ["v1_24"] }
kube = { version = "0.88", features = ["runtime"] }
log = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.25.0", features = ["all-widgets"] }
tui-logger = "0.10.1"